--- a/.github/workflows/personality.yml
+++ b/.github/workflows/personality.yml
@@ -32,5 +32,5 @@ jobs:
          plugin_16personalities: yes
          plugin_16personalities_url: https://www.16personalities.com/profiles/7d75d6bd1cf50
          plugin_16personalities_sections: personality, traits
-         plugin_16personalities_scores: no
+         plugin_16personalities_scores: yes
 
